# tofuknowledge-backend

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pyCI.yaml  pyLinter.yaml
api/: main.py  migrate_db.py
api/db/: db.py
api/models/: articles.py  users.py
api/routers/: article.py  tag.py  user.py
api/schemas/: article.py
docs/notes/: 2025-09-19-setupDocker.md  2025-09-19-setupPoetry.md  2025-09-19-template.md  2025-09-20-githubActionsLinter.md  2025-09-22-addPytest.md  2025-10-03-dbmigration.md  2025-10-03-loginMysql.md
tests/: test_main.py
